2006-08-17  Nurdin Premji  <npremji@redhat.com>

	* Makefile.am: Stopped recompiling the class files 3 times.
	Should also fix make -j bugs. Thanks to cagney.
	
	ftkeventviewer.c (ftk_eventviewer_init): Fixed exception error.

2006-08-16  Nurdin Premji  <npremji@redhat.com>

	* src/widgets/ftkeventviewer.h: More trace highlighting.
	* src/widgets/ftkeventviewer.c: Reimplemented macro.
	More code on trace highlighting, should now feel "normal".
	* src/jni/com_redhat_ftk_EventViewer.c: Reimplemented macro "kludge".
	
	* src/jni/com_redhat_ftk_EventViewer.c: Ditto
	* src/widgets/ftkeventviewer.c: Removed kludge of storing integer in a pointer.	
	* src/java/com/redhat/ftk/EventViewer.java: Removed kludge of casting integer as a pointer.

	* src/widgets/ftkeventviewer.c: Added more code for trace highlighting based on button release
	as well as button click events. User clicks and then drags away == cancel.

2006-08-15  Nurdin Premji  <npremji@redhat.com>

	* src/widgets/ftkeventviewer.h: Ditto.
	* src/widgets/ftkeventviewer.c: Asthetic changes to eventviewer.
	Note that ftk_eventviewer_expose must manually call gtk_propogate_expose.

2006-08-14  Nurdin Premji  <npremji@redhat.com>

	* src/jni/com_redhat_ftk_EventViewer.c (Java_com_redhat_ftk_EventViewer_ftk_1eventviewer_1get_1selected_1traces)
	Fixed 64/32 bit breakages with GPOINTER_TO_INT macro.
	* src/widgets/ftkeventviewer.c (ftk_eventviewer_get_selected_traces): 
	Fixed 64/32 bit breakages with GINT_TO_POINTER macro.

2006-08-14  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (ftk.jar): Add all classes to jar.
	* src/java/com/redhat/ftk/EventViewer.java (getSelectedTraces):
	Returns long[].
	(ftk_eventviewer_get_selected_traces): Likewise.
	* src/jni/com_redhat_ftk_EventViewer.c
	(Java_com_redhat_ftk_EventViewer_ftk_1eventviewer_1get_1selected_1traces):
	Returns jlongArray.
	* src/widgets/ftkeventviewer.c (ftk_eventviewer_get_selected_traces):
	Uses longs.

2006-08-11  Nurdin Premji  <npremji@redhat.com>
