@@ -1,3 +1,8 @@
+2006-08-18  Nurdin Premji  <npremji@redhat.com>
+
+	* src/widgets/ftkeventviewer.c: Fixed bugs with eventviewer not updating
+	when new events added. 
+
 2006-08-17  Nurdin Premji  <npremji@redhat.com>
 
 	* Makefile.am: Stopped recompiling the class files 3 times.
